# grfutils

./: CMakeLists.txt  COMPILE  Doxyfile.in  README.md
coverity/: model.c
protocols/session1/: init_melder-suchen.txt  melder-auslesen-b1db.txt  melder-auslesen_melder-diagnose-b1db.txt  melder-suchen-gruppe-b1db.txt  signal-ein.txt  signal-ein_signal-aus.txt
src/: CMakeLists.txt  grf.h  grf_comm.c  grf_logging.c  grf_logging.h  grf_radio.h  grf_radio_uart.c  grf_uart.c
